--- a/methodsPaper/tex/abstract.tex
+++ b/methodsPaper/tex/abstract.tex
@@ -1,5 +1,3 @@
-\section{Summary:}
-
 While increased active transportation, primarily cycling and walking,
 is often held up as a goal for improved public health --- via reduced
 chronic disease, improved air quality, and reductions in greenhouse
@@ -20,6 +18,7 @@ Our findings show that the California and New York State have travel
 patterns that, if mirrored by the nation, would save the U.S. upwards
 of fifty thousand disability adjusted life years.
 
+%\subsection{Summary:}
 %% \section{Availability:}
 
 %% %% \package{} may be explored using the user interface avaiable
@@ -27,11 +26,11 @@ of fifty thousand disability adjusted life years.
 %% The source code and data files for \package{} are publicly available
 %% on GitHub via a link on \webpage{}.
 
-\section{Supplementary information:}
+% \section{Supplementary information:}
 
-See \webpage{} for links to the source code, manual, tutorial and
-links for more information about the ITHIM model.
+% See \webpage{} for links to the source code, manual, tutorial and
+% links for more information about the ITHIM model.
 
-\section{Contact:}
-\href{javargo@wisc.edu}{javargo@wisc.edu}
+% \section{Contact:}
+% \href{javargo@wisc.edu}{javargo@wisc.edu}
 
