--- a/methodsPaper/tex/materialsAndMethods.tex
+++ b/methodsPaper/tex/materialsAndMethods.tex
@@ -17,12 +17,10 @@ is modeled with a \logNormal{} distribution with the age-sex specific
 mean ratios for non-travel-related exposure are estimated from the
 ATUS \cite{ATUS}.  The referent group mean is treated as a variable
 and the coefficient of variation is treated as constant across age-sex
-strata and estimated with ATUS.  We see in Figure \ref{dalyFigure}
-that varying the mean values for non-travel-related exposure does not
-greatly affect the estimate for disease burden.  The distribution for
-travel-related exposure is estimated from the time spent walking or
-cycling, i.e., active transport time, which as in the original ITHIM
-model has a \logNormal{} distribution with constant coefficient of
-variation across age-sex strata.  Travel-related exposure is estimated
-from active transport time using assumptions about how much physical
+strata and estimated with ATUS.  The distribution for travel-related
+exposure is estimated from the time spent walking or cycling, i.e.,
+active transport time, which as in the original ITHIM model has
+a \logNormal{} distribution with constant coefficient of variation
+across age-sex strata.  Travel-related exposure is estimated from
+active transport time using assumptions about how much physical
 activity is required for cycling and walking.
