--- a/methodsPaper/tex/results.tex
+++ b/methodsPaper/tex/results.tex
@@ -5,6 +5,13 @@ areas for each of seven states (CA, TX, NY, FL, VA, NC and AZ)
 sample size for reasonable estimates of age-sex specific
 travel-related walking and cycling means, Figure \ref{meanMatrices}.
 
+\begin{figure}[t]
+  \centerline{\includegraphics[width=\textwidth]{./figures/fig3.pdf}}
+    \caption{Mean travel time by mode (walking/cycling) for each of
+      seven states.  National means are displayed on the
+      right.}\label{meanMatrices}
+\end{figure}
+
 Of these seven states one was found to show active transport behavior
 that, if adopted nation-wide, would avert 75-100,000 DALYs overall.
 Values for national disease-specific DALYs were found using the CDC
