added Pucher ref

--- a/tex/ITHIM.bib
+++ b/tex/ITHIM.bib
@@ -1,3 +1,14 @@
+@article{pucher2010,
+  title={Walking and cycling to health: a comparative analysis of city, state, and international data},
+  author={Pucher, John and Buehler, Ralph and Bassett, David R and Dannenberg, Andrew L},
+  journal={American journal of public health},
+  volume={100},
+  number={10},
+  pages={1986--1992},
+  year={2010},
+  publisher={American Public Health Association}
+}
+
 @Article{woodcock2013,
 author = {Woodcock, J. and Givoni, M. and Morgan, A.S.},
 title = {Health impact modelling of active travel visions for
