Tested pucher2010 reference in methods paper
Seems like it worked.

--- a/methodsPaper/tex/introduction.tex
+++ b/methodsPaper/tex/introduction.tex
@@ -36,3 +36,5 @@ distribution of non-travel-related activity, improving numerical
 precision when computing the population attributable fraction and
 creating a simple user-interface for the custom-built \R{}
 package \package{}.
+
+Dummy ref \cite{pucher2010}.
