Small updates to manuscripts
Still trying to separate the content into two papers.  I need more material...

--- a/secondPaper/secondPaper.tex
+++ b/secondPaper/secondPaper.tex
@@ -71,8 +71,8 @@ implications” format subheadings.
 \section{Public Health Implications}
 \input{./tex/publicHealthImplications}
 
-\section*{Acknowledgment}
-\paragraph{Funding\textcolon} SGY is supported by \ldots,\ JV, JP by \ldots
+%% \section*{Acknowledgment}
+%% \paragraph{Funding\textcolon} SGY is supported by \ldots,\ JV, JP by \ldots
 
 %\bibliographystyle{natbib}
 \bibliographystyle{bmc_article}
