--- a/tex/ITHIM.bib
+++ b/tex/ITHIM.bib
@@ -1,3 +1,14 @@
+@article{younkin2016,
+  title={A Comparative Risk Assessment of Active Transportation in the United
+States},
+  author={Younkin, Samuel and Vargo, Jason and Patz, Jonathan},
+  journal={PLOS One},
+  volume={?},
+  number={?},
+  pages={?},
+  year={2016}
+}
+
 @article{pucher2010,
   title={Walking and cycling to health: a comparative analysis of city, state, and international data},
   author={Pucher, John and Buehler, Ralph and Bassett, David R and Dannenberg, Andrew L},
