--- a/methodsPaper/methodsPaper.tex
+++ b/methodsPaper/methodsPaper.tex
@@ -100,7 +100,7 @@ States} % Please use "title case" (capitalize all terms in the title except conj
 % Insert author names, affiliations and corresponding author email (do not include titles, positions, or degrees).
 \\
 Samuel Younkin\textsuperscript{1},\ %,2\Yinyang},
-Jason Vargo\textsuperscript{1, 2},\ %\Yinyang},
+Jason Vargo\textsuperscript{1, 2}\ %\Yinyang},
 Neil Maizlish\textsuperscript{3},\ %\Yinyang},
 Jonathan Patz\textsuperscript{1, 2}%,3\textcurrency},
 %Name4 Surname\textsuperscript{2},
