--- a/methodsPaper/tex/introduction.tex
+++ b/methodsPaper/tex/introduction.tex
@@ -6,22 +6,13 @@ levels of aerobic activity, which is 2.5 hours per week. There is
 considerable variability in the attainment of this goal by location
 within the country. Supportive local built and policy environments are
 important determinants of population-level activity
-patterns. Particularly, as they facilitate and foster routine moderate
-physical activity, such as walking, local decissions on design and
-policy can play a huge role in the Nation's health.
+patterns. Particularly, as they facilitate and foster routine and moderate
+physical activity, such as walking, local decisions on design and
+policy can play a huge role in improving the nation's health.
 
-%% To better understand the potential for attainable shifts in
-%% transportation behavior across the US, we employed a comparative risk
-%% assessment methodology to compare national averages for time spent
-%% walking and cycling for transport to those of specific states. Our
-%% estimates can provide an important evidence base to encourage new
-%% construction, retrofits, land use policy, and programatic funding to
-%% support active transportation. Particularly in places with poor
-%% attainmnet of the physical activity guidelines, such investments can
-%% be importnat pieces of lareger population health interventions that
-%% have effective and long-lasting impacts.
+Given the constraints and complexity of local governance and infrastructure investments, land use, and human behavior there is a need for high quality and reliable data and tools for decision-making related to urban transportaiton systems. The lack of accurate and availbale estimates of the health impacts of such decisions has limited the effectiveness of efforts to encourage non-motorized transport in the US and in other countries. In the last decade new tools, applying comparative risk assessment methodologies, have made progress toward quantifying the multple health impacts of changes to the transportation system and behaviors. 
 
-ITHIM is a statistical model that integrates data on active transport,
+ITHIM is one such statistical model that integrates data on active transport,
 physical activity, fine particulate matter and greenhouse gas
 emissions to provide estimates for the proportional change in
 mortality and morbidity for given baseline and alternate travel
@@ -36,3 +27,5 @@ distribution of non-travel-related activity, improving numerical
 precision when computing the population attributable fraction and
 creating a simple user-interface for the custom-built \R{}
 package \package{}.
+
+Here we present this implementation using publically-available datasets with coverage of the entire United States, and investigate the sensitivity of the model outputs to variability in the input parameters. The results of this work suggest that statistical modeling and tools like the custom-built \R{} package \package{} can improve the application of this useful methodology and increase its utility to both practicioners and researchers. 
