--- a/methodsPaper/tex/materialsAndMethods.tex
+++ b/methodsPaper/tex/materialsAndMethods.tex
@@ -24,3 +24,7 @@ a \logNormal{} distribution with constant coefficient of variation
 across age-sex strata.  Travel-related exposure is estimated from
 active transport time using assumptions about how much physical
 activity is required for cycling and walking.
+
+%does this involve using the CDC Wonder data? we could add a bit here about it, but if this is just national estimtes and shifts perhaps we don't need it. 
+
+For the purposes of this implementation we limited our analyses to metropolitan regions of the United States. To idenfity urban populations we used the National Center for Health Statistics 2013 Urban-Rural Classification Scheme for Counties \cite{ingram2014}. We eliminated counties in the US with the classifcation of 'nonmetropolitan' (noncore or micropolitan). We used this and similar classification schemes as well as county and state identifiers in other datsets (NHTS, ATUS, CDC WONDER) to ensure consistency in our estimates for input parameters. 
