NCHS urban rural citation

--- a/tex/ITHIM.bib
+++ b/tex/ITHIM.bib
@@ -9,6 +9,16 @@ States},
   year={2016}
 }
 
+@article{ingram2014,
+  title={2013 NCHS Urban-Rural Classification Scheme for Counties.},
+  author={Ingram, Deborah D and Franco, Sheila J},
+  journal={Vital and health statistics. Series 2, Data evaluation and methods research},
+  number={166},
+  pages={1},
+  year={2014},
+  publisher={Vital Health Stat 2}
+}
+
 @article{pucher2010,
   title={Walking and cycling to health: a comparative analysis of city, state, and international data},
   author={Pucher, John and Buehler, Ralph and Bassett, David R and Dannenberg, Andrew L},
